file-manager: Fix invalid unref of NULL pointer.

https://bugzilla.gnome.org/show_bug.cgi?id=688430